[gd_scene load_steps=2 format=3 uid="uid://map_system_scene"]

[ext_resource type="Script" path="res://UI/MapSystem.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://Assets/UI/Map/map_bg.png" id="2_bg"]
[ext_resource type="Texture2D" path="res://Assets/UI/Map/icon_player.png" id="3_pl"]
[ext_resource type="Texture2D" path="res://Assets/UI/Map/icon_teleport.png" id="4_tp"]
[ext_resource type="Texture2D" path="res://Assets/UI/Map/icon_tower.png" id="5_tw"]

[node name="MapSystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")
map_texture = ExtResource("2_bg")
player_icon_texture = ExtResource("3_pl")
point_icon_texture = ExtResource("4_tp")
tower_icon_texture = ExtResource("5_tw")

[node name="MapContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MapTexture" type="TextureRect" parent="MapContainer"]
layout_mode = 0
expand_mode = 1
texture = ExtResource("2_bg")

[node name="Icons" type="Control" parent="MapContainer"]
anchors_preset = 0

[node name="PlayerMarker" type="TextureRect" parent="MapContainer"]
layout_mode = 0
expand_mode = 1
